--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.0.5",
     "next": "14.1.0",
     "react": "^18",
+    "react-charts": "^3.0.0-beta.57",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
   },
